fix overflow

--- a/web/static/css/modules/_analysis.scss
+++ b/web/static/css/modules/_analysis.scss
@@ -5,6 +5,7 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+  overflow-y: hidden;
 }
 
 .analysis__chart-container {
